@@ -1,3 +1,7 @@
+2006-01-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/relocate.cc (setup_paths): Add more debugging verbosity.
+
 2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/lily.scm (lilypond-all): oops. remove debugging hack.
